Adds “full introduction”

--- a/introduction.html
+++ b/introduction.html
@@ -182,100 +182,169 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 col-lg-offset-2" id="article-wrap">
+							<div class="container-fluid">
+								<div class="row">
+									<img src="images/why-graphic.jpg" class="img-responsive">
+								</div>
+							</div>
+							<div class="lead">A vast stretch of America finds itself engulfed in a collective fear, a fear marked with confusion, frustration, and apprehensions. </div>
 
-							<h2>How To Use This Playbook</h2>
-							<p>The intended audience of this playbook will be the Chief Information Officer (CIO), Chief Technology Officer (CTO), Directors, Department Chiefs, and IT Managers as a primer to educate the reader about digital transformation concepts and the considerations and trade space involved with transforming to modern IT environments.</p>
+							<p>Acts of terrorism and violence are occurring more often and at places no one ever imagined. As a result, the American public finds themselves looking over their shoulder questioning when they will be caught in the midst of the next looming threat. For some, the shock of repeated violence is leaving them desensitized and resigned. Others remain steadfast as they refuse to concede to terrorists or other pressures of mass murderers, foreign or domestic. But for a growing community, there is apprehension, despair, and anger as they wonder why the most advanced government in the world is unable to collectively do more to prevent these attacks.</p>
 
-							<p>This primer outlines how the major building blocks described in the subsequent chapters of this playbook intersect to achieve the common goal of modernizing IT infrastructure, sharing and analyzing data and reengineering business processes and culture to bring the enterprise into a stage that will be agile enough to adopt and deploy technologies at a pace that is consistent with the rate of change of today’s technological advances. With this in mind, the goal of this Digital Transformation Playbook will be to lower the barrier to entry for the less technical consumers of technology and level the playing field. Each building block may be leveraged by any organization as they see fit.</p>
+							<p>Unfortunately, this is today’s reality. We live in a complex and dangerous world beset by more crisis and threats around the globe than ever before. Increased organized terrorist threats, rise of caliphates, lone-wolf attacks, sectarian wars, and insider threats are but a few examples of overwhelming unrest in what used to be loosely connected terrorism has now diversified and become globally dispersed. In the wake of recent exposures made by Wiki- Leaks and similar cyber-security attacks, the nation’s security posture has changed with a loss of critical foreign intelligence collection sources and with our adversaries gaining greater insights on U.S. intelligence sources, methods, and tradecraft - making operations more difficult to execute. As a consequence, the agencies within the Intelligence Community (IC), Services, and Combatant Commands (COCOMs) must operate more efficiently with less across complex multi-domain missions utilizing multi-INT mission sets with the universal goal of gathering and analyzing all forms of data to assess threats and influence strategies to protect U.S. interests. </p>
 
-							<p>This playbook is divided into 4 logical sections:</p>
+							<p>Presently, the IC continues to adjust to the constant change in intelligence demands which requires it to shift from “hard targets” to diverse digital ones. Based on the findings of the 911 Commission on Counter-Terrorism, terrorist groups are becoming more innovative and using digitally advanced tactics through the use of cyber warfare and social media to accomplish their agendas. In the wake of this change, there is a rising demand for easily accessible data and ongoing pressure for IC elements to collaborate, share information and gain “intelligence” from data faster and efficiently to counter the growth of digitally advanced threats. </p>
+							
 
-							<div class="snippet">
-								<h5>Chapter 1</h5>
-								<p>Explains our viewpoint of the Digital Transformation journey to explain the meaning of digital transformation, the compelling need to transform, the overarching considerations during transformation, and relevance to the Intelligence Community.</p>
+							<div class="row quote">
+								<div class="col-sm-2 col-md-2 col-lg-2">
+									<img src="images/robert-thub.jpg" class="img-circle" width="100" height="100">
+								</div>
+								<div class="col-sm-9 col-md-9 col-lg-9">
+									<blockquote>
+										<p>“We’ve come to understand that the way we built systems in the past, the way we developed applications, the way we brought [information technology] to the analysts’ desktop, won’t work in the future. It’s not agile, it’s not responsive enough, and it’s not timely.”</p>
+										<footer>- Robert Cardillo, <cite title="Source Title">Director of the National Geospatial-Intelligence Agency</cite></footer>
+									</blockquote>
+								</div>
 							</div>
 
-							<div class="snippet">
-								<h5>Chapter 2</h5>
-								<p>Defines our portfolio based approach to digital transformation known as our Enterprise Integration framework which serves to help organizations achieve an open, agile stage of IT maturity by addressing the shift toward “on-demand” solutions and maximizing the innovations of shared services, platform standardization &amp; optimization, application rationalization, enterprise cloud capabilities, mobile device integration, and big data analytics.</p>
+
+							<p>In response to these threats and to better serve the mission, each IC element swiftly responded to provide secure technology services to its own stakeholders which has perpetuated the independent development of infrastructure and applications. As a result, IT implementations were executed with an emphasis on localized needs rather than a holistic enterprise view focused on standardization, interoperability, and efficiency. As these investments into stovepiped capabilities continued, the volume, redundancy, and complexity of these architectures inhibited data sharing across organizational and mission lines, required higher operating costs, and increased resources to maintain closed and proprietary technologies.</p>
+
+
+							<p>Furthermore, fiduciary responsibilities shaped by policies, authorities, varied disciplines, missions, and the interwoven nature of National Intelligence Program (NIP) and Military Intelligence Program (MIP) budgets has created dependencies across the Agencies, CoCOMs, Services - making every decision have delayed outcomes and unsustainable in the long run. The underlying complexity of the current IT infrastructure, increasing budget pressures and continued need to share data across organizational and mission lines have driven the development of the Intelligence Community Information Technology Enterprise (IC ITE). IC ITE is a strategy to further the Director of National Intelligence’s (DNI) vision of intelligence integration to move the IC from a historical agency-centric IT architecture to a new common platform – one that sets the stage for innovation through “shared services” – allowing the Community to easily and securely share technology, information, and resources. </p>
+
+							<p>This transformative effort to move IC agencies toward shared services is envisioned to accelerate inter-agency collaboration through cloud computing, enterprise security, enterprise service management, and a common desktop environment with the intended benefits of cost savings, increased agility, enhanced security, productivity, and integration. Most importantly, IC ITE is expected to help the IC leverage the ever-growing amount of data at its disposal to answer key intelligence questions more rapidly and with greater confidence.</p>
+
+							<p>With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology into the IC ITE model. For the IC elements, digital transformation will be a paradigm shift from legacy operations which will span several years and require stakeholders to fully understand the digital landscape with regard to cloud architectures and shared services, and anticipate the future needs of a digital workforce to sustain new modes of operation. </p>
+
+							<div class="container-fluid graphic">
+								<div class="row">
+									<img src="images/intro-graphic-figure1.jpg" class="img-responsive">
+								</div>
 							</div>
 
-							<div class="snippet">
-								<h5>Chapter 3</h5>
-								<p>Explains digital transformation in context of the IC’s cloud reference implementation and the value proposition enabled by a cloud services model.</p>
+							<div class="container-fluid graphic">
+								<div class="row">
+									<img src="images/intro-graphic-figure2.jpg" class="img-responsive">
+								</div>
 							</div>
 
-							<div class="snippet">
-								<h5>CHAPTERS 4,5, AND 6</h5>
-								<p>Provides a three-tiered approach for considering people, process, and technology and outlines the best practices, roadmaps, approaches, and techniques that organizations can leverage to help guide critical decisions during the journey to a successful Digital Enterprise.</p>
-							</div>
-						
+
+							<p>This Digital Transformation Playbook seeks to de-mystify the intent and complexity of the IC ITE shared services model and also provides the framework and techniques to evolve the IC into a collaborative enterprise that is operationally efficient, technically advanced, and positioned to adopt capabilities that tomorrow’s multi-domain, multi-INT missions demand. As one of the most sweeping technical implementations in its history, the success of IC ITE will be based on the ability and willingness of the agencies to exploit the benefits of common architectures and shared services operating model.</p>
+
+
+							<p>Given the growing volume of threats and the shorter response times to control these dangers, the IC must quickly resolve the cultural, technical, and bureaucratic barriers and execute a unified agenda to adopt these enabling technologies, establish joint roles and responsibilities, remove cultural inhibitors, and define new procedures and policies that support modernization, collaboration, interoperability, agility, and continued innovation. Starting the path to digital transformation and embracing IC ITE’s cloud-computing model will open the door for the IC to surely realize IT cost-savings through reuse of services and exploit functional and technical benefits from managed services platform – reliability, scalability, security, and automation. </p>
+
+							<p>With the increase of tenants within IC ITE, data sharing, collaboration, and pedigree of analytics also increases making multi-domain, multi-INT missions better coordinated and successful. Innovation will always keep the IC a step ahead of the enemy in preventing emerging enemy threats. IC ITE is the innovation environment that will enable the IC to work as one “intelligence” entity.</p>
 						</div>
-						</div>
-					</div>
-				</section>
-
-
-		
-
-			</main><!-- / main-->
-
-			<footer>
-
-
-
-				<div class="container-fluid ">
-					<div class="row">
-						<div class="col-sm-12 corp"><span>© Copyright 2017, Booz Allen Hamilton Inc. All Rights Reserved.</span></div>
 					</div>
 				</div>
+			</section>
 
-			</footer>
+
+			<div class="grey-bkgd" style="margin-bottom:0;">
+				<div class="container">
+					<div class="row global">
+						<h5>Rise Of Global Unrest</h5>
+
+						<div class="col-sm-4 col-md-4 col-lg-4">
+							<ul class="sidenote">
+								<li>Boston Marathon bombing</li>
+								<li>ISIS related terrorism in France</li>
+								<li>Snowden NSA breach</li>
+								<li>Sectarian war in Syria</li>
+								<li>Conflicts in Lebanon and Iraq</li>
+							</ul>
+						</div>
+
+						<div class="col-sm-4 col-md-4 col-lg-4">
+							<ul class="sidenote">
+								<li>Refugee crisis in Jordan, Turkey,and Lebanon</li>
+								<li>Implications of troop drawdown in Afghanistan</li>
+								<li>Deteriorating internal security posture in Iraq</li>
+							</ul>
+						</div>
+
+						<div class="col-sm-4 col-md-4 col-lg-4">
+							<ul class="sidenote">
+								<li>Growth of foreign cyber capabilities</li>
+								<li>Proliferation of weapons of mass destruction</li>
+								<li>Aggressive nation-state intelligence efforts against US</li>
+								<li>Assertive Russia, Competitive China, Unpredictable North Korea</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
-			<script src="js/jquery-1.11.2.min.js"></script>
+			<div class="next chapter1">
+				<div class="container-fluid">
+					<div class="row chap-nav">
+						<a href="chapter1.html">Start Chapter 1</a>
+					</div>
+				<div>
+			</div>
 
-			<script type="text/javascript">
+		</main><!-- / main-->
 
-			$(document).ready(function(){                    
-				$(window).scroll(function(){                          
-					if ($(this).scrollTop() > 40) {
-						$('.top-nav-line').addClass('scrolling');
-					} else {
-						$('.top-nav-line').removeClass('scrolling');
-					}
-				});
+		<footer>
+
+
+
+			<div class="container-fluid ">
+				<div class="row">
+					<div class="col-sm-12 corp"><span>© Copyright 2017, Booz Allen Hamilton Inc. All Rights Reserved.</span></div>
+				</div>
+			</div>
+
+		</footer>
+
+
+		<script src="js/jquery-1.11.2.min.js"></script>
+
+		<script type="text/javascript">
+
+		$(document).ready(function(){                    
+			$(window).scroll(function(){                          
+				if ($(this).scrollTop() > 40) {
+					$('.top-nav-line').addClass('scrolling');
+				} else {
+					$('.top-nav-line').removeClass('scrolling');
+				}
 			});
+		});
 
-			</script>
-			<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true"></script>
-			<script src="js/bootstrap.js"></script>
-			<script src="js/bootstrap-select.js"></script>
-			<script src="js/bootstrap-tabcollapse.js"></script> 
-			<script src="js/dzsparallaxer.js"></script> 
-			<script src="js/easy-circle-skill.js"></script>
-			<script src="js/getshar-0.8.0.min.js"></script> 
-			<script src="js/imagesloaded.pkgd.min.js"></script>
-			<script src="js/isotope.pkgd.min.js"></script>
-			<script src="js/jquery.appear.js"></script> 
-			<script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
-			<script src="js/jquery.countTo.js"></script> 
-			<script src="js/jquery.easing.1.3.js"></script> 
-			<script src="js/jquery.mCustomScrollbar.js"></script> 
-			<script src="js/jquery.scrollTo.min.js"></script>
-			<script src="js/jquery.singlePageNav.min.js"></script>
-			<script src="js/jquery.textillate.js"></script> 
-			<script src="js/jquery-asPieProgress.js"></script> 
-			<script src="js/masonry.pkgd.js"></script> 
-			<script src="js/masonry.pkgd.min.js"></script> 
-			<script src="js/owl.carousel.js"></script>
-			<script src="js/responsiveslides.js"></script>
-			<script src="js/sliders.js"></script> 
-			<script src="js/small-icons.js"></script> 
-			<script src="js/jquery.textillate.js"></script>
-			<script src="js/assets/jquery.fittext.js"></script>
-			<script src="js/assets/jquery.lettering.js"></script>
-			<script src="js/fancybox/source/jquery.fancybox.pack.js"></script>
-			<script src="js/main.js"></script>
-		</body>
-		</html>
+		</script>
+		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true"></script>
+		<script src="js/bootstrap.js"></script>
+		<script src="js/bootstrap-select.js"></script>
+		<script src="js/bootstrap-tabcollapse.js"></script> 
+		<script src="js/dzsparallaxer.js"></script> 
+		<script src="js/easy-circle-skill.js"></script>
+		<script src="js/getshar-0.8.0.min.js"></script> 
+		<script src="js/imagesloaded.pkgd.min.js"></script>
+		<script src="js/isotope.pkgd.min.js"></script>
+		<script src="js/jquery.appear.js"></script> 
+		<script src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
+		<script src="js/jquery.countTo.js"></script> 
+		<script src="js/jquery.easing.1.3.js"></script> 
+		<script src="js/jquery.mCustomScrollbar.js"></script> 
+		<script src="js/jquery.scrollTo.min.js"></script>
+		<script src="js/jquery.singlePageNav.min.js"></script>
+		<script src="js/jquery.textillate.js"></script> 
+		<script src="js/jquery-asPieProgress.js"></script> 
+		<script src="js/masonry.pkgd.js"></script> 
+		<script src="js/masonry.pkgd.min.js"></script> 
+		<script src="js/owl.carousel.js"></script>
+		<script src="js/responsiveslides.js"></script>
+		<script src="js/sliders.js"></script> 
+		<script src="js/small-icons.js"></script> 
+		<script src="js/jquery.textillate.js"></script>
+		<script src="js/assets/jquery.fittext.js"></script>
+		<script src="js/assets/jquery.lettering.js"></script>
+		<script src="js/fancybox/source/jquery.fancybox.pack.js"></script>
+		<script src="js/main.js"></script>
+	</body>
+	</html>
