Adds “Next Chapter”

--- a/summary.html
+++ b/summary.html
@@ -167,8 +167,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center chap-cover">
 								<div class="title-wrap">
-								<span>Chapter 6</span>
-								<h2>Modern Digital Operations</h2>
+								<h2>Summary / Closing</h2>
 								</div>
 							</div>
 						</div>
@@ -183,7 +182,6 @@
 				<div class="intro-section">
 					<div class="container">
 						<div class="col-lg-8 col-lg-offset-2 intro" id="article-wrap">
-							<h2>SUMMARY / CLOSING</h2>
 							<div class="lead">Digital transformation primarily involves the modernization of IT infrastructures to promote information sharing and set the stage for the adoption of new cost effective technologies that increase capabilities through faster delivery of intuitive IT systems, enhance data mining &amp; analytics, increase enterprise mobility, and ensure improved defense against cyber threats and vulnerabilities.</div>
 							
 							<p>To accomplish this, it involves the use of open architectures to promote interoperability, open source components to maximize reusability, open standards to foster cohesive development, open communities to invite sharing and innovation, and open data to make information more available to users.</p>
