--- a/index.html
+++ b/index.html
@@ -305,6 +305,19 @@
 		</footer>
 
 
+		<div class="modal fade" tabindex="-1" role="dialog" id="imageModal">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					</div>
+					<div class="modal-body">
+						
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+
 		<script src="js/jquery-1.11.2.min.js"></script>
 
 		<script type="text/javascript">
