Adds “New Headings”

--- a/introduction.html
+++ b/introduction.html
@@ -136,45 +136,51 @@
 							<nav class="collapse collapsing navbar-collapse">
 								<div class="nav navbar-nav navbar-center toc">
 									
+									<a href="introduction.html">
+										<div class="toc-wrap">
+											<div class="toc-content"><h4 style="margin:0">Introduction</h4></div>
+										</div>
+									</a>
+
 									<a href="chapter1.html">
 										<div class="toc-wrap">
-											<img src="images/toc-chap1.jpg" class="img-responsive pull-left gap-right">
 											<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
 										</div>
 									</a>
 
 									<a href="chapter2.html">
 										<div class="toc-wrap">
-											<img src="images/toc-chap2.jpg" class="img-responsive pull-left gap-right">
 											<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
 										</div>
 									</a>
 
 									<a href="chapter3.html">
 										<div class="toc-wrap">
-											<img src="images/toc-chap3.jpg" class="img-responsive pull-left gap-right">
 											<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
 										</div>
 									</a>
 
 									<a href="chapter4.html">
 										<div class="toc-wrap">
-											<img src="images/toc-chap4.jpg" class="img-responsive pull-left gap-right">
 											<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
 										</div>
 									</a>
 
 									<a href="chapter5.html">
 										<div class="toc-wrap">
-											<img src="images/toc-chap5.jpg" class="img-responsive pull-left gap-right">
 											<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
 										</div>
 									</a>
 
 									<a href="chapter6.html">
 										<div class="toc-wrap">
-											<img src="images/toc-chap6.jpg" class="img-responsive pull-left gap-right">
 											<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
+										</div>
+									</a>
+
+									<a href="summary.html">
+										<div class="toc-wrap">
+											<div class="toc-content"><h4 style="margin:0">Summary / Closing</h4></div>
 										</div>
 									</a>
 
@@ -207,7 +213,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center chap-cover">
 								<div class="title-wrap">
-									<h2>Introduction</h2>
+									<h1>Introduction</h1>
 								</div>
 							</div>
 						</div>
