--- a/summary.html
+++ b/summary.html
@@ -63,7 +63,7 @@
 				</button>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#"><i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
+				<li><a href="how.html"><i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
 				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
 					<ul class="dropdown-menu">
 						<div class="menu-divider">
@@ -135,46 +135,52 @@
 							<nav class="collapse collapsing navbar-collapse">
 								<div class="nav navbar-nav navbar-center toc">
 									
+									<a href="introduction.html">
+										<div class="toc-wrap">
+											<div class="toc-content"><h4 style="margin:0">Introduction</h4></div>
+										</div>
+									</a>
+
 									<a href="chapter1.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap1.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<div class="toc-content"><span>Chapter 1</span><h4>Digital Transformation</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter2.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap2.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<div class="toc-content"><span>Chapter 2</span><h4>Enterprise Modernization</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter3.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap3.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<div class="toc-content"><span>Chapter 3</span><h4>Digital Transformation in the IC Cloud</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter4.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap4.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<div class="toc-content"><span>Chapter 4</span><h4>Digital Transformation From Traditional IT</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter5.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap5.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<div class="toc-content"><span>Chapter 5</span><h4>Digital Ready Workforce</h4></div>
+										</div>
 									</a>
 
 									<a href="chapter6.html">
-									<div class="toc-wrap">
-										<img src="images/toc-chap6.jpg" class="img-responsive pull-left gap-right">
-										<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
-									</div>
+										<div class="toc-wrap">
+											<div class="toc-content"><span>Chapter 6</span><h4>Modern Digital Operations</h4></div>
+										</div>
+									</a>
+
+									<a href="summary.html">
+										<div class="toc-wrap">
+											<div class="toc-content"><h4 style="margin:0">Summary / Closing</h4></div>
+										</div>
 									</a>
 
 								</div>
@@ -206,7 +212,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center chap-cover">
 								<div class="title-wrap">
-								<h2>Summary / Closing</h2>
+								<h1>Summary / Closing</h1>
 								</div>
 							</div>
 						</div>
@@ -217,8 +223,7 @@
 			<!-- /primary-banner -->
 
 			<!-- CHAPTER 6 -->
-			<section id="download" class="content-section text-center">
-				<div class="intro-section">
+			<section class="content-section text-center">
 					<div class="container">
 						<div class="col-lg-8 col-lg-offset-2 intro" id="article-wrap">
 							<div class="lead">Digital transformation primarily involves the modernization of IT infrastructures to promote information sharing and set the stage for the adoption of new cost effective technologies that increase capabilities through faster delivery of intuitive IT systems, enhance data mining &amp; analytics, increase enterprise mobility, and ensure improved defense against cyber threats and vulnerabilities.</div>
@@ -235,7 +240,6 @@
 
 						</div>
 					</div>
-				</div>
 			</section>
 			<!-- CHAPTER 1 -->
 
