adds animation on scroll to images/icons

--- a/how.html
+++ b/how.html
@@ -11,6 +11,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/dzsparallaxer.css">
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
@@ -327,6 +328,7 @@
 			<script src="js/owl.carousel.js"></script>
 			<script src="js/responsiveslides.js"></script>
 			<script src="js/sliders.js"></script> 
+			<script src="js/aos.js"></script>
 			<script src="js/small-icons.js"></script> 
 			<script src="js/jquery.textillate.js"></script>
 			<script src="js/assets/jquery.fittext.js"></script>
