--- a/introduction.html
+++ b/introduction.html
@@ -11,6 +11,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/font-awesome.css">
+<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css">
 	<link rel="stylesheet" href="css/dzsparallaxer.css">
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
@@ -229,7 +230,7 @@
 						<div class="col-lg-8 col-lg-offset-2" id="article-wrap">
 							<div class="container-fluid">
 								<div class="row">
-									<img src="images/why-graphic.jpg" class="img-responsive">
+									<img src="images/why-graphic.jpg" class="img-responsive" data-aos="fade">
 								</div>
 							</div>
 							<div class="lead">A vast stretch of America finds itself engulfed in a collective fear, a fear marked with confusion, frustration, and apprehensions. </div>
@@ -241,7 +242,7 @@
 							<p>Presently, the IC continues to adjust to the constant change in intelligence demands which requires it to shift from “hard targets” to diverse digital ones. Based on the findings of the 911 Commission on Counter-Terrorism, terrorist groups are becoming more innovative and using digitally advanced tactics through the use of cyber warfare and social media to accomplish their agendas. In the wake of this change, there is a rising demand for easily accessible data and ongoing pressure for IC elements to collaborate, share information and gain “intelligence” from data faster and efficiently to counter the growth of digitally advanced threats. </p>
 							
 
-							<div class="row quote">
+							<div class="row quote" data-aos="fade-left">
 								<div class="col-sm-2 col-md-2 col-lg-2">
 									<img src="images/robert-thub.jpg" class="img-circle" width="100" height="100">
 								</div>
@@ -263,13 +264,13 @@
 
 							<p>With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology into the IC ITE model. For the IC elements, digital transformation will be a paradigm shift from legacy operations which will span several years and require stakeholders to fully understand the digital landscape with regard to cloud architectures and shared services, and anticipate the future needs of a digital workforce to sustain new modes of operation. </p>
 
-							<div class="container-fluid graphic">
+							<div class="container-fluid graphic" data-aos="fade">
 								<div class="row">
 									<img src="images/intro-graphic-figure1.jpg" class="img-responsive">
 								</div>
 							</div>
 
-							<div class="container-fluid graphic">
+							<div class="container-fluid graphic" data-aos="fade">
 								<div class="row">
 									<img src="images/intro-graphic-figure2.jpg" class="img-responsive">
 								</div>
@@ -398,6 +399,7 @@
 		<script src="js/owl.carousel.js"></script>
 		<script src="js/responsiveslides.js"></script>
 		<script src="js/sliders.js"></script> 
+		<script src="js/aos.js"></script>
 		<script src="js/small-icons.js"></script> 
 		<script src="js/jquery.textillate.js"></script>
 		<script src="js/assets/jquery.fittext.js"></script>
