adds text animations

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-sm-12 text-center bookcover">
-								<h1>Digital <br>Transformation</h1>
-								<p>A Playbook For The Intelligence Community (IC)</p>
+								<h1 data-aos="fade-up" data-aos-duration="900">Digital <br>Transformation</h1>
+								<p data-aos="fade" data-aos-duration="900" data-aos-delay="1000">A Playbook For The Intelligence Community (IC)</p>
 							</div>
 						</div>
 					</div>
@@ -201,10 +201,10 @@
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
 				<div class="container-fluid">
-				<div class="row">
+				<div class="row aos-animation-cluster-1">
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 						<div class="chapter1">
-							<div class="content">
+							<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-1">
 								<div class="articles">
 									<p>Chapter 1</p>
 									<h3>What is Digital Transformation</h3>
@@ -216,7 +216,7 @@
 
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 						<div class="chapter2">
-							<div class="content">
+							<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-1" data-aos-delay="200">
 								<div class="articles">
 									<p>Chapter 2</p>
 									<h3>Enterprise Modernization</h3>
@@ -234,10 +234,10 @@
 			<section class="section portfolio" id="chapters">
 				<div id="portfolio-anchor"></div>
 				<div class="container-fluid">
-					<div class="row">
+					<div class="row aos-animation-cluster-2">
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 							<div class="chapter3">
-								<div class="content">
+								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-2">
 									<div class="articles">
 										<p>Chapter 3</p>
 										<h3>Digital Transformation In The Cloud</h3>
@@ -249,7 +249,7 @@
 
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 							<div class="chapter4">
-								<div class="content">
+								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-2" data-aos-delay="200">
 									<div class="articles">
 										<p>Chapter 4</p>
 										<h3>Digital Transformation From Traditional IT</h3>
@@ -267,10 +267,10 @@
 				<section class="section portfolio" id="chapters">
 					<div id="portfolio-anchor"></div>
 					<div class="container-fluid">
-					<div class="row">
+					<div class="row aos-animation-cluster-3">
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 							<div class="chapter5">
-								<div class="content">
+								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-3">
 									<div class="articles">
 										<p>Chapter 5</p>
 										<h3>Digital Ready Workforce</h3>
@@ -282,7 +282,7 @@
 
 						<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 no-padding">
 							<div class="chapter6">
-								<div class="content">
+								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-3" data-aos-delay="200">
 									<div class="articles">
 										<p>Chapter 6</p>
 										<h3>Modern Digitl Operations</h3>
