--- a/how.html
+++ b/how.html
@@ -214,7 +214,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center chap-cover">
 								<div class="title-wrap">
-									<h1>HOW TO USE THIS PLAYBOOK</h1>
+									<h1 data-aos="fade-up" data-aos-duration="900">HOW TO USE THIS PLAYBOOK</h1>
 								</div>
 							</div>
 						</div>
