--- a/summary.html
+++ b/summary.html
@@ -213,7 +213,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center chap-cover">
 								<div class="title-wrap">
-								<h1>Summary / Closing</h1>
+								<h1 data-aos="fade-up" data-aos-duration="900">Summary / Closing</h1>
 								</div>
 							</div>
 						</div>
