--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 								<div class="articles">
 									<p>Chapter 1</p>
 									<h3>What is Digital Transformation</h3>
-									<a href="#">Read More</a>
+									<a href="chapter1.html">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -220,7 +220,7 @@
 								<div class="articles">
 									<p>Chapter 2</p>
 									<h3>Enterprise Modernization</h3>
-									<a href="#">Read More</a>
+									<a href="chapter2.html">Read More</a>
 								</div>
 							</div>
 						</div>
@@ -241,7 +241,7 @@
 									<div class="articles">
 										<p>Chapter 3</p>
 										<h3>Digital Transformation In The Cloud</h3>
-										<a href="#">Read More</a>
+										<a href="chapter3.html">Read More</a>
 									</div>
 								</div>
 							</div>
@@ -253,7 +253,7 @@
 									<div class="articles">
 										<p>Chapter 4</p>
 										<h3>Digital Transformation From Traditional IT</h3>
-										<a href="#">Read More</a>
+										<a href="chapter4.html">Read More</a>
 									</div>
 								</div>
 							</div>
@@ -274,7 +274,7 @@
 									<div class="articles">
 										<p>Chapter 5</p>
 										<h3>Digital Ready Workforce</h3>
-										<a href="#">Read More</a>
+										<a href="chapter5.html">Read More</a>
 									</div>
 								</div>
 							</div>
@@ -285,8 +285,8 @@
 								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-3" data-aos-delay="200">
 									<div class="articles">
 										<p>Chapter 6</p>
-										<h3>Modern Digitl Operations</h3>
-										<a href="#">Read More</a>
+										<h3>Modern Digital Operations</h3>
+										<a href="chapter6.html">Read More</a>
 									</div>
 								</div>
 							</div>
