intro diagram images zoom fixed

--- a/introduction.html
+++ b/introduction.html
@@ -266,13 +266,13 @@
 
 							<div class="container-fluid graphic" data-aos="fade">
 								<div class="row">
-									<img src="images/intro-graphic-figure1.jpg" class="img-responsive">
+									<img src="images/intro-graphic-figure1.jpg" class="img-responsive imageZoom">
 								</div>
 							</div>
 
 							<div class="container-fluid graphic" data-aos="fade">
 								<div class="row">
-									<img src="images/intro-graphic-figure2.jpg" class="img-responsive">
+									<img src="images/intro-graphic-figure2.jpg" class="img-responsive imageZoom">
 								</div>
 							</div>
 
