--- a/index.html
+++ b/index.html
@@ -63,15 +63,54 @@
 					<span class="icon-bar"></span>
 				</button>
 			</ul>
-			<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right">
 				<li><a href="how.html"><i class="fa fa-info-circle" aria-hidden="true"></i></a></li>
 				<li class="dropdown"><a href="contact.html" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user-circle" aria-hidden="true"></i></a>
 					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
-						<li class="divider"></li>
-						<li><a href="#">Separated link</a></li>
+						<div class="menu-divider">
+							<li class="col-sm-4 contact-wrap">
+								<ul>
+									<li class="contact-img"><img src="images/wade.jpg" class="img-responsive img-circle"></li>
+								</ul>
+
+							</li>
+
+							<li class="col-sm-8 contact">
+								<h5>Ralph Wade, <i>Vice President</i></h5>
+								<a href="mailto:Wade_Ralph@bah.com">Wade_Ralph@bah.com</a>
+								<span>703-377-6100</span>
+							</li>
+						</div>
+
+						<div class="menu-divider">
+							<li class="col-sm-4 contact-wrap">
+								<ul>
+									<li class="contact-img"><img src="images/melissa.jpg" class="img-responsive img-circle"></li>
+								</ul>
+
+							</li>
+
+							<li class="col-sm-8 contact">
+								<h5>Melissa Sutherland, <i>Principal</i></h5>
+								<a href="mailto:Sutherland_Melissa@bah.com">Sutherland_Melissa@bah.com</a>
+								<span>757-892-6511</span>
+							</li>
+						</div>
+
+						<div class="menu-divider">
+							<li class="col-sm-4 contact-wrap">
+								<ul>
+									<li class="contact-img"><img src="images/james.jpg" class="img-responsive img-circle"></li>
+								</ul>
+
+							</li>
+
+							<li class="col-sm-8 contact">
+								<h5>James J Chung, <i>Chief Technologist</i></h5>
+								<a href="mailto:Chung_James_J.com">Chung_James_J@bah.com</a>
+								<span>703-377-1134</span>
+							</li>
+						</div>
 					</ul>
 
 				</li>
@@ -190,7 +229,7 @@
 						<div class="col-lg-8 col-lg-offset-2 intro">
 							<h4>Introduction</h4>
 							<p class="lead">With the introduction of new digital capabilities and the continual evolution of newer digital ecosystems, the IC must seize the opportunity to digitally transform and “modernize” technology.</p>
-							<a href="#">Read More</a>
+							<a href="introduction.html">Read More</a>
 						</div>
 					</div>
 				</div>
