--- a/index.html
+++ b/index.html
@@ -111,6 +111,21 @@
 								<span>703-377-1134</span>
 							</li>
 						</div>
+
+						<div class="menu-divider">
+							<li class="col-sm-4 contact-wrap">
+								<ul>
+									<li class="contact-img"><img src="images/taveras.jpg" class="img-responsive img-circle"></li>
+								</ul>
+
+							</li>
+
+							<li class="col-sm-8 contact">
+								<h5>Agustin Taveras, <i>Senior Executive Advisor</i></h5>
+								<a href="mailto:Chung_James_J.com">Taveras_Agustin@ne.bah.com</a>
+								<span>202-549-5580</span>
+							</li>
+						</div>
 					</ul>
 
 				</li>
@@ -279,7 +294,7 @@
 								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-2">
 									<div class="articles">
 										<p>Chapter 3</p>
-										<h3>Digital Transformation In The Cloud</h3>
+										<h3>Digital Transformation In Context of the IC Cloud</h3>
 										<a href="chapter3.html">Read More</a>
 									</div>
 								</div>
