--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 								<div class="content" data-aos="fade-up" data-aos-anchor=".aos-animation-cluster-2">
 									<div class="articles">
 										<p>Chapter 3</p>
-										<h3>Digital Transformation In Context of the IC Cloud</h3>
+										<h3>Digital Transformation in the IC Cloud</h3>
 										<a href="chapter3.html">Read More</a>
 									</div>
 								</div>
