--- a/introduction.html
+++ b/introduction.html
@@ -341,7 +341,7 @@
 			</div>
 
 
-			<div class="next chapter1">
+			<div class="next-wrap chapter1">
 				<div class="container-fluid">
 					<div class="row chap-nav">
 						<a href="chapter1.html">Start Chapter 1</a>
