--- a/introduction.html
+++ b/introduction.html
@@ -344,7 +344,9 @@
 			<div class="next-wrap chapter1">
 				<div class="container-fluid">
 					<div class="row chap-nav">
+						<div class="read-next-wrap">
 						<a href="chapter1.html">Start Chapter 1</a>
+					</div>
 					</div>
 				<div>
 			</div>
