changes branding to show digital transformation title in top banner

--- a/introduction.html
+++ b/introduction.html
@@ -55,7 +55,7 @@
 
 		<div id="nav-anchor"></div>
 		<div class="container-fluid top-nav-line">
-			<a class="nav-brand" href="index.html"><img src="images/bah-logo.png" width="184" height="21"></a>
+			<a class="nav-brand" href="index.html"><h4 class="header-branding">Digital Transformation</h4><h5 class="header-branding-sub">Introduction</h5></a>
 			<ul class="nav navbar-nav navbar-left">
 				<button id="menu-open">
 					<span class="icon-bar"></span>
