--- a/introduction.html
+++ b/introduction.html
@@ -243,9 +243,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-8 col-lg-offset-2" id="article-wrap">
-							<div class="container-fluid">
+							<div class="container-fluid graphic">
 								<div class="row">
-									<img src="images/why-graphic.jpg" class="img-responsive" data-aos="fade">
+									<img src="images/zoom/intro-why-graphic.jpg" class="img-responsive imageZoom" data-aos="fade">
 								</div>
 							</div>
 							<div class="lead">A vast stretch of America finds itself engulfed in a collective fear, a fear marked with confusion, frustration, and apprehensions. </div>
