--- a/introduction.html
+++ b/introduction.html
@@ -70,7 +70,7 @@
 						<div class="menu-divider">
 						<li class="col-sm-4 contact-wrap">
 							<ul>
-								<li class="contact-img"><img src="images/wade.jpg" class="img-responsive img-circle"></li>
+								<li class="contact-img"><img src="images/wade.jpg" class="img-responsive"></li>
 							</ul>
 
 						</li>
@@ -85,7 +85,7 @@
 					<div class="menu-divider">
 						<li class="col-sm-4 contact-wrap">
 							<ul>
-								<li class="contact-img"><img src="images/melissa.jpg" class="img-responsive img-circle"></li>
+								<li class="contact-img"><img src="images/melissa.jpg" class="img-responsive"></li>
 							</ul>
 
 						</li>
@@ -100,7 +100,7 @@
 					<div class="menu-divider">
 						<li class="col-sm-4 contact-wrap">
 							<ul>
-								<li class="contact-img"><img src="images/james.jpg" class="img-responsive img-circle"></li>
+								<li class="contact-img"><img src="images/james.jpg" class="img-responsive"></li>
 							</ul>
 
 						</li>
@@ -115,7 +115,7 @@
 						<div class="menu-divider">
 							<li class="col-sm-4 contact-wrap">
 								<ul>
-									<li class="contact-img"><img src="images/taveras.jpg" class="img-responsive img-circle"></li>
+									<li class="contact-img"><img src="images/taveras.jpg" class="img-responsive"></li>
 								</ul>
 
 							</li>
@@ -276,6 +276,7 @@
 								<div class="row">
 									<img src="images/intro-graphic-figure2.jpg" class="img-responsive imageZoom">
 								</div>
+								<p><i>Figure 2 – U.S. Intelligence Funding – Creative Commons Source: <a href="http://www.martingrandjean.ch" target="_blank">www.martingrandjean.ch</a></i></p>
 							</div>
 
 
@@ -289,6 +290,7 @@
 								<div class="row">
 									<img src="images/intro-graphic-figure1.jpg" class="img-responsive imageZoom">
 								</div>
+									<p><i>Figure 1 – IC Mission and Executive Agents Mapping</i></p>
 							</div>
 
 
