Adds “Booz Summary”

--- a/index.html
+++ b/index.html
@@ -350,6 +350,16 @@
 			</section> 
 			<!-- / Third Chapter Row -->
 
+			<div class="booz-bkgd">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-10 col-md-12 col-lg-12 booz-lead">
+							<h5>About Booz Allen</h5>
+							<p>Booz Allen Hamilton has been at the forefront of strategy and technology for more than 100 years. Today, the firm provides management and technology consulting and engineering services to leading Fortune 500 corporations, governments, and not-for-profits across the globe. Booz Allen partners with public and private sector clients to solve their most difficult challenges through a combination of consulting, analytics, mission operations, technology, systems delivery, cybersecurity, engineering, and innovation expertise.  With international headquarters in McLean, Virginia, the firm employs more than 22,600 people globally and had revenue of $5.41 billion for the 12 months ended March 31, 2016. To learn more, visit BoozAllen.com. (NYSE: BAH)<p></div>
+					</div>
+				</div>
+			</div>
+
 		</main><!-- / main-->
 
 		<footer>
