--- a/introduction.html
+++ b/introduction.html
@@ -347,8 +347,9 @@
 				<div class="container-fluid">
 					<div class="row chap-nav">
 						<div class="read-next-wrap">
-						<a href="chapter1.html">Start Chapter 1</a>
-					</div>
+							<a href="chapter1.html">Start Chapter 1</a>
+						</div>
+						<a href="index.html">&laquo; Back to Home</a>
 					</div>
 				<div>
 			</div>
