--- a/introduction.html
+++ b/introduction.html
@@ -76,7 +76,7 @@
 						</li>
 
 						<li class="col-sm-8 contact">
-							<h5>Ralph Wade, <i>Vice President</i></h5>
+							<h5>Ralph Wade <br><i>Vice President</i></h5>
 							<a href="mailto:Wade_Ralph@bah.com">Wade_Ralph@bah.com</a>
 							<span>703-377-6100</span>
 						</li>
@@ -91,7 +91,7 @@
 						</li>
 
 						<li class="col-sm-8 contact">
-							<h5>Melissa Sutherland, <i>Principal</i></h5>
+							<h5>Melissa Sutherland <br><i>Principal</i></h5>
 							<a href="mailto:Sutherland_Melissa@bah.com">Sutherland_Melissa@bah.com</a>
 							<span>757-892-6511</span>
 						</li>
@@ -106,7 +106,7 @@
 						</li>
 
 						<li class="col-sm-8 contact">
-							<h5>James J Chung, <i>Chief Technologist</i></h5>
+							<h5>James J Chung <br><i>Chief Technologist</i></h5>
 							<a href="mailto:Chung_James_J.com">Chung_James_J@bah.com</a>
 							<span>703-377-1134</span>
 						</li>
@@ -121,7 +121,7 @@
 							</li>
 
 							<li class="col-sm-8 contact">
-								<h5>Agustin Taveras, <i>Senior Executive Advisor</i></h5>
+								<h5>Agustin Taveras <br><i>Senior Executive Advisor</i></h5>
 								<a href="mailto:Chung_James_J.com">Taveras_Agustin@ne.bah.com</a>
 								<span>202-549-5580</span>
 							</li>
@@ -247,6 +247,7 @@
 								<div class="row">
 									<img src="images/zoom/intro-why-graphic.jpg" class="img-responsive imageZoom" data-aos="fade">
 								</div>
+								<p><i>Figure 1 – The Intelligence Community Mission</i></p>
 							</div>
 							<div class="lead">A vast stretch of America finds itself engulfed in a collective fear, a fear marked with confusion, frustration, and apprehensions. </div>
 
@@ -276,7 +277,7 @@
 								<div class="row">
 									<img src="images/intro-graphic-figure2.jpg" class="img-responsive imageZoom">
 								</div>
-								<p><i>Figure 2 – U.S. Intelligence Funding – Creative Commons Source: <a href="http://www.martingrandjean.ch" target="_blank">www.martingrandjean.ch</a></i></p>
+								<p><i>Figure 2 – U.S. Intelligence Funding – Creative Commons Source: <a href="http://www.martingrandjean.ch/data-visualization-top-secret-us-intelligence-budget/" target="_blank">Martin Grandjean</a></i></p>
 							</div>
 
 
@@ -290,7 +291,7 @@
 								<div class="row">
 									<img src="images/intro-graphic-figure1.jpg" class="img-responsive imageZoom">
 								</div>
-									<p><i>Figure 1 – IC Mission and Executive Agents Mapping</i></p>
+									<p><i>Figure 3 – IC Mission and Executive Agents Mapping</i></p>
 							</div>
 
 
