replace intro why graphic

--- a/introduction.html
+++ b/introduction.html
@@ -245,7 +245,7 @@
 						<div class="col-lg-8 col-lg-offset-2" id="article-wrap">
 							<div class="container-fluid graphic">
 								<div class="row">
-									<img src="images/zoom/intro-why-graphic.jpg" class="img-responsive imageZoom" data-aos="fade">
+									<img src="images/zoom/intro-why-graphic.png" class="img-responsive imageZoom" data-aos="fade">
 								</div>
 								<p><i>Figure 1 – The Intelligence Community Mission</i></p>
 							</div>
