more minor text edits

--- a/how.html
+++ b/how.html
@@ -266,7 +266,7 @@
 
 							<div class="snippet">
 								<h5>CHAPTERS 4,5, AND 6</h5>
-								<p>Provides a three-tiered approach for considering people, process, and technology and outlines the best practices, roadmaps, approaches, and techniques that organizations can leverage to help guide critical decisions during the journey to a successful Digital Enterprise.</p>
+								<p>Provides our approaches for considering people, process, and technology and outlines the best practices, roadmaps, approaches, and techniques that organizations can leverage to help guide critical decisions during the journey to a successful Digital Enterprise.</p>
 							</div>
 						
 						</div>
