--- a/introduction.html
+++ b/introduction.html
@@ -247,7 +247,7 @@
 								<div class="row">
 									<img src="images/zoom/intro-why-graphic.png" class="img-responsive imageZoom" data-aos="fade">
 								</div>
-								<p><i>Figure 1 – The Intelligence Community Mission</i></p>
+								<p><i>Figure 1 – The Evolving Intelligence Community Mission</i></p>
 							</div>
 							<div class="lead">A vast stretch of America finds itself engulfed in a collective fear, a fear marked with confusion, frustration, and apprehensions. </div>
 
@@ -281,7 +281,7 @@
 							</div>
 
 
-							<p>Furthermore, fiduciary responsibilities shaped by policies, authorities, varied disciplines, missions, and the interwoven nature of National Intelligence Program (NIP) and Military Intelligence Program (MIP) budgets has created dependencies across the Agencies, CoCOMs, Services - making every decision have delayed outcomes and unsustainable in the long run. The underlying complexity of the current IT infrastructure, increasing budget pressures and continued need to share data across organizational and mission lines have driven the development of the Intelligence Community Information Technology Enterprise (IC ITE). IC ITE is a strategy to further the Director of National Intelligence’s (DNI) vision of intelligence integration to move the IC from a historical agency-centric IT architecture to a new common platform – one that sets the stage for innovation through “shared services” – allowing the Community to easily and securely share technology, information, and resources. </p>
+							<p>Furthermore, fiduciary responsibilities shaped by policies, authorities, varied disciplines, missions, and the interwoven nature of National Intelligence Program (NIP) and Military Intelligence Program (MIP) budgets has created dependencies across the Agencies, COCOMs, Services - making every decision have delayed outcomes and unsustainable in the long run. The underlying complexity of the current IT infrastructure, increasing budget pressures and continued need to share data across organizational and mission lines have driven the development of the Intelligence Community Information Technology Enterprise (IC ITE). IC ITE is a strategy to further the Director of National Intelligence’s (DNI) vision of intelligence integration to move the IC from a historical agency-centric IT architecture to a new common platform – one that sets the stage for innovation through “shared services” – allowing the Community to easily and securely share technology, information, and resources. </p>
 
 							<p>This transformative effort to move IC agencies toward shared services is envisioned to accelerate inter-agency collaboration through cloud computing, enterprise security, enterprise service management, and a common desktop environment with the intended benefits of cost savings, increased agility, enhanced security, productivity, and integration. Most importantly, IC ITE is expected to help the IC leverage the ever-growing amount of data at its disposal to answer key intelligence questions more rapidly and with greater confidence.</p>
 
@@ -319,15 +319,16 @@
 								<li>ISIS related terrorism in France</li>
 								<li>Snowden NSA breach</li>
 								<li>Sectarian war in Syria</li>
-								<li>Conflicts in Lebanon and Iraq</li>
+								
 							</ul>
 						</div>
 
 						<div class="col-sm-4 col-md-4 col-lg-4">
 							<ul class="sidenote">
 								<li>Refugee crisis in Jordan, Turkey,and Lebanon</li>
-								<li>Implications of troop drawdown in Afghanistan</li>
+								<li>Conflicts in Lebanon and Iraq</li>
 								<li>Deteriorating internal security posture in Iraq</li>
+								<li>Implications of troop drawdown in Afghanistan</li>
 							</ul>
 						</div>
 
